--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "fs": "0.0.1-security",
+    "pug": "^2.0.0-rc.4",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
