--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "pug": "^2.0.0-rc.4",
   },
   "devDependencies": {
     "fs": "0.0.1-security",
-    "pug": "^2.0.0-rc.4",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
