--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "fs": "0.0.1-security",
