--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
+  "name": "express-pug",
+  "version": "0.0.1",
   "description": "A sample Node.js app using Express 4",
   "engines": {
     "node": "8.9.1"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
-    "fs": "0.0.1-security",
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "fs": "0.0.1-security"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/davidmmemorandum/express-pug"
   },
   "keywords": [
     "node",
